# inso-extpipes-cli

./: .env_example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile-azure-pipelines  Dockerfile.debug  Procfile  README.md  action.yml  docker-entrypoint.sh  docker-extpipes-entrypoint.sh  extpipes-cli  pyproject.toml
.github/workflows/: bump.yaml  bump.yaml_deactivated  ci.yaml  code-quality.yaml
configs/: example-azure-devops-pipeline.yaml  example-config-extpipes.yml  example-config-extpipesv2.yml  example-config-extpipesv2to3.yml  example-config-extpipesv3-minimum.yml  example-config-extpipesv3.yml  test-dev-extpipes.yml
configs/extpipes-configs/: sap001config.yaml
incubator/extpipes_cli/: __init__.py  __main__.py
pack/: build.sh  run.sh
src/: __main__.py  configs.py  index.py  orchestrator.py  utils.py
src/commands/: base.py  deploy.py
src/extpipes/: __main__.py  app_config.py  app_container.py  app_exceptions.py
src/extpipes/commands/: base.py  deploy.py
src/extpipes/common/: base_model.py  cognite_client.py
tests/: test_app_configs.py  test_cognite_client.py
tests/example/: .env_mock  cognite_client-config-example-02.0.yml  config-delete-example-03.0.yml  config-deploy-example-01.0.yml  config-deploy-example-01.1.yml  config-deploy-example-01.2.yml  config-deploy-example-01.3.yml  config-prepare-example-00.0.yml
